--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,1 @@
-*.py[cod]
-
-# C extensions
-*.so
-
-# Unit test / coverage reports
-.coverage
-.tox
-nosetests.xml
-
-# Translations
-*.mo
-
-# Mr Developer
-.mr.developer.cfg
-.project
-.pydevproject
+*.komodoproject
